--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x-icon" href="../Favicon/favi.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>GIBSON HOLBEN</title>
+        <title>mastermind</title>
         <link href="style.css" rel="stylesheet" type="text/css" />
         <script src="script.js"></script>
 
