Added mobile site

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet" />
+
+        <script>
+            if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|OperaMini/i.test(navigator.userAgent)) {
+                window.location.href = 'mobile.html';
+             }
+        </script>
     </head>
 
     <body onresiz e="fixDuck()">
@@ -82,6 +88,8 @@
     </body>
 
     <script>
+
+ 
         window.onscroll = function (e) {
 
             var navs = document.getElementsByClassName("nav-bar");
