--- a/mobile.html
+++ b/mobile.html
@@ -129,12 +129,18 @@
 
 <body style="background-image: url(Images/bkg/grass.png);">
   <!-- NAV BAR -->
-  <div  style=" background-image: url(Images/bkg/RockMerge.png); width: 100%; height:70px; background-size: 150%; transform: scale(-1) translate(0, 0.4vh);"></div>
+  <div style="position: relative; width: 100%; height: 70px;">
+  	<div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url('Images/bkg/RockMerge.png'); background-size: 150%; transform: scale(-1); z-index: -1;">
+  	</div>
+    <br>
+  	<a href="https://your-link-here.com" target="_blank" style="color: white; text-decoration: none; padding: 10px;">About </a>
+  	<a href="https://another-link-here.com" target="_blank" style="color: white; text-decoration: none; padding: 10px;">Contact</a>
+  </div>
 
 
 
 
-  <h1 style="margin-top: 100px;">The Mastermind's portfolio</h1>
+  <h1 style="margin-top: 20px;">The Mastermind</h1>
 
   <div class="merge-banner-wrapper">
     <div class="merge-banner"></div>
@@ -143,7 +149,7 @@
 
   <div class="section-blue">
     <h1>
-      Software development student with over 5 years in C# & Java as well as a decent understanding of the web development trifecta
+        Aspiring software developer with 4 years of non-professional programming experience in Unity, C#, Java, HTML5, CSS3, Javascript and Python, as well as a foundational understanding of Object Oriented Programming and web design. 
     </h1>
   </div>
 
