--- a/mobile.html
+++ b/mobile.html
@@ -36,6 +36,9 @@
       text-align: center;
       font-size: clamp(24px, 5vw, 100px);
     }
+    a{
+      text-decoration: none;
+    }
 
 
     .section-blue {
