--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x-icon" href="../Favicon/favi.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>mastermind</title>
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+                        <title>mastermind</title>
         <link href="style.css" rel="stylesheet" type="text/css" />
         <script src="script.js"></script>
 
@@ -22,27 +22,26 @@
 
     <body onresiz e="fixDuck()">
         <!-- NAV BAR -->
-        <nav id="top-nav" class="nav-bar" style="z-index: 2; position: fixed; top: 0px; background-color: rgba(51, 51, 51, 0); width: 100%; height: 7vh;">
+        <nav id="top-nav" class="nav-bar" style="z-index: 2; position: fixed; top: 0px; background-color: rgba(51, 51, 51, 0); width: 100%; height: 67px;">
             <a class="nav-link" href="subPages/About.html"><h1>About</h1></a>
             <a class="nav-link" href="subPages/Contact.html"><h1>Contact</h1></a>
             <div class="nav-bar" style="opacity: 0%; background-image: url(Images/bkg/RockMerge.png); width: 100%; height: 5.5vh; background-size: 150%; transform: scale(-1) translate(0, 0.4vh);"></div>
         </nav>
 
         <h1 style="text-align: center; font-size: 100px;">The Mastermind</h1>
-        <h1 style="text-align: center;">Home</h1>
 
         <div id="Duck" onclick="reverseDuck()" style="margin-top: 5.5vh; z-index: 1; position: absolute; background-image: url(Images/duck.png); width: 300px; height: 244px; background-size: 100%;"></div>
 
         <div style="background: rgb(30, 127, 255); background-image: url(Images/bkg/plainwater.png); width: 100%; height: 60vh; margin-top: 200px; background-size: 9%;">
-            <div style="background-image: url(Images/bkg/merge.png); width: 100%; height: 5.5vh; background-size: 150%;"></div>
+            <div style="background-image: url(Images/bkg/merge.png); width: 100%; height: 55px; background-size: 150%; background-repeat: no-repeat;"></div>
 
-            <h1 class="text-main" style="padding-top: 100px; margin-bottom: 50px; padding-left: 250px;">
-                Software development student with over 5 years in C# & Java as well as a decent understanding of the web development trifecta
+            <h1 class="text-main" style="padding-top: 150px; margin-bottom: 50px; padding-left: 250px;">
+                Software engineer with over 5 years experience in multiple programming languages (e.g. JAVA, C#, HTML5, CSS3, javascript, and python)
             </h1>
         </div>
 
         <div style="background: rgb(13, 71, 21); width: 100%; height: 80vh; background-size: 150%; background-image: url(Images/bkg/DarkGrass.png); filter: brightness(100%);">
-            <div style="background-image: url(Images/bkg/DarkMerge.png); width: 100%; height: 5.5vh; background-size: 150%; transform: translate(0, -5vh);"></div>
+            <div style="background-image: url(Images/bkg/DarkMerge.png); width: 100%; height: 53px; background-size: 150%; transform: translate(0, -40px); background-repeat:  no-repeat;"></div>
 
 
             <div id="ProjectContentText" style="color: white; position: absolute; margin-left: 20px; margin-top: 20px; width: 31vw;">
