--- a/mobile.html
+++ b/mobile.html
@@ -128,6 +128,12 @@
 
 
   </style>
+
+  <script>
+    if(!/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|OperaMini/i.test(navigator.userAgent)) {
+        window.location.href = 'mobile.html';
+    }
+  </script>
 </head>
 
 <body style="background-image: url(Images/bkg/grass.png);">
