--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div style="background-image: url(Images/bkg/merge.png); width: 100%; height: 55px; background-size: 150%; background-repeat: no-repeat;"></div>
 
             <h1 class="text-main" style="padding-top: 150px; margin-bottom: 50px; padding-left: 250px;">
-                Software engineer with over 5 years experience in multiple programming languages (e.g. JAVA, C#, HTML5, CSS3, javascript, and python)
+                Aspiring software developer with 4 years of non-professional programming experience in Unity, C#, Java, HTML5, CSS3, Javascript and Python, as well as a foundational understanding of Object Oriented Programming and web design. 
             </h1>
         </div>
 
