--- a/mobile.html
+++ b/mobile.html
@@ -129,11 +129,11 @@
 
   </style>
 
-  <script>
-    if(!/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|OperaMini/i.test(navigator.userAgent)) {
-        window.location.href = 'mobile.html';
-    }
-  </script>
+<script>
+  if(!/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|OperaMini/i.test(navigator.userAgent)) {
+      window.location.href = 'index.html';
+   }
+</script>
 </head>
 
 <body style="background-image: url(Images/bkg/grass.png);">
