--- a/mobile.html
+++ b/mobile.html
@@ -180,7 +180,7 @@
       </a>
 
       <!-- Project 2 -->
-      <a href="subPages/UnityGames/TODO" class="projects-content" style="background-color: #43a047;">
+      <a href="subPages/UnityGames/TODO" class="projects-content" style="background-color: #434ca0;">
         <div class="image-project" style="background-image: url(Images/Projects/UNO.png);"></div>
         <div class="project-text">
           <p>Uno Java</p>
