--- a/mobile.html
+++ b/mobile.html
@@ -172,7 +172,7 @@
 
     <div class="projects-wrapper">
       <!-- Project 1 -->
-      <a href="subPages/UnityGames/TODO" class="projects-content" style="background-color: #e53935;">
+      <a href="subPages/UnityGames/TODO" class="projects-content" style="background-color: #b10101;">
         <div class="image-project" style="background-image: url(Images/Projects/Cave.png);"></div>
         <div class="project-text">
           <p>Awaken (In development)</p>
@@ -180,7 +180,7 @@
       </a>
 
       <!-- Project 2 -->
-      <a href="subPages/UnityGames/TODO" class="projects-content" style="background-color: #434ca0;">
+      <a href="subPages/UnityGames/TODO" class="projects-content" style="background-color: #d36451;">
         <div class="image-project" style="background-image: url(Images/Projects/UNO.png);"></div>
         <div class="project-text">
           <p>Uno Java</p>
@@ -188,7 +188,7 @@
       </a>
 
       <!-- Project 3 -->
-      <a href="subPages/UnityGames/Kitchen Combat/Kitchen Combat.html" class="projects-content" style="background-color: #1e88e5;">
+      <a href="subPages/UnityGames/Kitchen Combat/Kitchen Combat.html" class="projects-content" style="background-color: #4b8dc7;">
         <div class="image-project" style="background-image: url(Images/Projects/Pirate.PNG);"></div>
         <div class="project-text">
           <p>Kitchen Combat</p>
