--- a/mobile.html
+++ b/mobile.html
@@ -172,7 +172,7 @@
 
     <div class="projects-wrapper">
       <!-- Project 1 -->
-      <a href="subPages/UnityGames/TODO" class="projects-content" style="background-color: #b10101;">
+      <a href="subPages/UnityGames/TODO" class="projects-content" style="background-color: #4283a8;">
         <div class="image-project" style="background-image: url(Images/Projects/Cave.png);"></div>
         <div class="project-text">
           <p>Awaken (In development)</p>
