I think this fixes the friggen color issue

--- a/mobile.html
+++ b/mobile.html
@@ -92,7 +92,6 @@
 
     .project-text {
       padding: 10px;
-      background: rgba(0,0,0,0.4);
       color: white;
       text-align: center;
     }
@@ -172,7 +171,7 @@
 
     <div class="projects-wrapper">
       <!-- Project 1 -->
-      <a href="subPages/UnityGames/TODO" class="projects-content" style="background-color: #4283a8;">
+      <a href="subPages/UnityGames/TODO" class="projects-content" style="background-color: #800808;">
         <div class="image-project" style="background-image: url(Images/Projects/Cave.png);"></div>
         <div class="project-text">
           <p>Awaken (In development)</p>
@@ -180,7 +179,7 @@
       </a>
 
       <!-- Project 2 -->
-      <a href="subPages/UnityGames/TODO" class="projects-content" style="background-color: #d36451;">
+      <a href="subPages/UnityGames/TODO" class="projects-content" style="background-color: #d63f24;">
         <div class="image-project" style="background-image: url(Images/Projects/UNO.png);"></div>
         <div class="project-text">
           <p>Uno Java</p>
