Switched UNO to app manager

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             </a>
             
             <!-- Uno project section (replace with something worth using)-->
-            <a  href="subPages/UnityGames/TODO">
+            <a  href="https://github.com/the-real-mastermind/CustomGameManager">
               <div class="projects-content" style="background-color: red; height: 60vh; width: 20vw; position: absolute; margin-top: 5vh; right: 24vw; border-radius: 1.2vh;">
                 <div class="frosted-glass project-text">
-                    <p class="project-contents-text">Uno Java</p>
+                    <p style="color: white;" class="project-contents-text">Game/Application Manager</p>
                 </div>
-                <div class="image-project" style="background-image: url(Images/Projects/UNO.png);"></div>
+                <div class="image-project" style="background-image: url(Images/Projects/GameAppLarge.png);"></div>
             </div>
             </a>
             
