--- a/mobile.html
+++ b/mobile.html
@@ -176,7 +176,7 @@
       <!-- Project 1 -->
       <a class="projects-content" style="background-color: #800808;" onclick="ShowItem('wake-up-description')">
         <div class="image-project" style="background-image: url(Images/Projects/Cave.png);">
-         <div id="wake-up-description" style="padding: 10px; color: rgb(255, 255, 255); opacity: 0%;">Awaken is a game inspired by the 1990s era of The Legend Of Zelda. It features an extensive overworld with several sub areas  </div>
+         <div id="wake-up-description" style=" background-color: rgba(0,0,0,0.5); padding: 10px; color: rgb(255, 255, 255); opacity: 0%;">Awaken is a game inspired by the 1990s era of The Legend Of Zelda. It features an extensive overworld with several sub areas  </div>
         </div>
         <div class="project-text">
           <p>Awaken (In development)</p>
@@ -184,20 +184,20 @@
       </a>
 
       <!-- Project 2 -->
-      <a class="projects-content" style="background-color: #d63f24;" onclick="ShowItem('uno-description')">
+      <a class="projects-content" style="background-color: #2f812f;" onclick="ShowItem('uno-description')">
         <div class="image-project" style="background-image: url(Images/Projects/UNO.png);">
-          <div id="uno-description" style=" padding: 10px; color: rgba(0,0,0,1); opacity: 0%;">Uno java was a project that was made when I was learning the Java Swing library</div>
+          <div id="uno-description" style="background-color: rgba(0,0,0,0.5); padding: 10px; color: rgb(255, 255, 255); opacity: 0%;">This was a custom game/application manager created with speed in time, speed and optimization were key focuses of this app</div>
         </div>
         
         <div class="project-text">
-          <p>Uno Java</p>
+          <p>Application manager</p>
         </div>
       </a>
 
       <!-- Project 3 -->
       <a class="projects-content" style="background-color: #4b8dc7;" onclick="ShowItem('kitchen-combat-description')">
         <div class="image-project" style="background-image: url(Images/Projects/Pirate.PNG);">
-          <div id="kitchen-combat-description" style="padding: 10px; color: rgba(0,0,0,1); opacity: 0%;">Test</div>
+          <div id="kitchen-combat-description" style=" background-color: rgba(0,0,0,0.5); padding: 10px; color: rgb(255, 255, 255); opacity: 0%;">Kitchen combat was created by me and a friend, the game was planned out over 3 months and created with efficiency and speed in mind</div>
         </div>
         <div class="project-text">
           <p>Kitchen Combat</p>
