--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </h1>
             </div>
 
-            <!-- Awaken project section -->
+            <!-- Awaken section -->
             <a  href="subPages/UnityGames/TODO">
               <div class="projects-content" style="background-color: red; height: 60vh; width: 20vw; position: absolute; margin-top: 5vh; right: -2vw; border-radius: 1.2vh;">
                 <div class="frosted-glass project-text">
@@ -60,7 +60,7 @@
             </div>
             </a>
             
-            <!-- Uno project section (replace with something worth using)-->
+            <!-- Game Manager section-->
             <a  href="https://github.com/the-real-mastermind/CustomGameManager">
               <div class="projects-content" style="background-color: red; height: 60vh; width: 20vw; position: absolute; margin-top: 5vh; right: 24vw; border-radius: 1.2vh;">
                 <div class="frosted-glass project-text">
@@ -70,7 +70,7 @@
             </div>
             </a>
             
-            <!-- UKitchen Combat section-->
+            <!-- Kitchen Combat section-->
             <a href="subPages/UnityGames/Kitchen Combat/Kitchen Combat.html">
               <div class="projects-content" style="background-color: rgb(78, 112, 221); height: 60vh; width: 20vw; position: absolute; margin-top: 5vh; right: 46vw; border-radius: 1.2vh;">
               <div class="frosted-glass project-text">
