--- a/subPages/About.html
+++ b/subPages/About.html
@@ -20,24 +20,23 @@
         <!-- NAV BAR -->
         <nav id="top-nav" class="nav-bar" style="z-index: 2; position: fixed; top: 0px; background-color: rgba(51, 51, 51, 0); width: 100%; height: 67px;">
             <a class="nav-link" href="../index.html"><h1>Home</h1></a>
-            <a class="nav-link" href="subPages/Contact.html"><h1>Contact</h1></a>
-            <div class="nav-bar" style="opacity: 0%; background-image: url(../mages/bkg/RockMerge.png); width: 100%; height: 5.5vh; background-size: 150%; transform: scale(-1) translate(0, 0.4vh);"></div>
+            <a class="nav-link" href="../subPages/Contact.html"><h1>Contact</h1></a>
+            <div class="nav-bar" style="opacity: 0%; background-image: url(../images/bkg/RockMerge.png); width: 100%; height: 5.5vh; background-size: 150%; transform: scale(-1) translate(0, 0.4vh);"></div>
         </nav>
 
         <h1 style="text-align: center; font-size: 100px; margin-top: 200px;">About me</h1>
 
-        <div id="Duck" onclick="reverseDuck()" style="margin-top: 20px; z-index: 1; position: absolute; background-image: url(Images/duck.png); width: 300px; height: 244px; background-size: 100%;"></div>
 
-        <div style="background: rgb(30, 127, 255); background-image: url(../Images/bkg/plainwater.png); width: 100%; height: 700px; margin-top: 200px; background-size: 9%;">
+        <div style="background: rgb(30, 127, 255); background-image: url(../Images/bkg/plainwater.png); width: 100%; height: 700%; margin-top: 200px; background-size: 9%;">
             <div style="background-image: url(../Images/bkg/merge.png); width: 100%; height: 55px; background-size: 150%; background-repeat: no-repeat;"></div>
 
-            <h1 class="text-main" style="padding-top: 100px; margin-bottom: 50px; padding-left: 250px; font-size: 2vw; margin: 0px; padding: 40px; ">
+            <h1 class="text-main" style="padding-top: 100px; margin-bottom: 50px; padding-left: 250px; font-size: 250%; margin: 0px; padding: 40px; ">
                 My name is [REDACTED] I am a software engineering major studying at OCC. I have been into computers since I was but a wee lad, but only REALLY got in-depth into it back in 2020. I taught my self C# through books, youtube videos, and asking on online forums. Several years later I enrolled in a technical school so I could be duel enrolled in Oakland Community College. It was there that I learned JAVA, PYTHON, and the web development trifacta. I also obtained several certifications over those years.
             </h1>
         </div>
 
         <div style="background: rgb(13, 71, 21); width: 100%; height: 500px; background-size: 150%; background-image: url(../Images/bkg/DarkGrass.png); filter: brightness(100%);">
-            <div style="background-image: url(../Images/bkg/DarkMerge.png); width: 100%; height: 53px; background-size: 150%; transform: translate(0, -40px); background-repeat:  no-repeat;"></div>
+            <div style="background-image: url(../Images/bkg/DarkMerge.png); width: 100%; height: 53px; background-size: 150%; transform: translate(0, -34px); background-repeat:  no-repeat;"></div>
 
 
             <div id="ProjectContentText" style="color: white; position: absolute; margin-left: 20px; margin-top: 20px; width: 80%;">
@@ -56,6 +55,8 @@
             <div style="background-image: url(../Images/bkg/RockMerge.png); width: 100%; height: 5.5vh; background-size: 150%; transform: translate(0, -5vh);"></div>
             &copy; 2025 The Mastrmind. All rights reserved.
         </footer>
+
+        <script src="navScroll.js"></script>
     </body>
 
     
