--- a/subPages/Contact.html
+++ b/subPages/Contact.html
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="../Favicon/favi.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="script.js/"></script>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/x-icon" href="../Favicon/favi.ico" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <title>Contact</title>
+        <link href="../style.css" rel="stylesheet" type="text/css" />
+        <script src="script.js"></script>
 
-    <!-- Font stuff -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
-  </head>
+        <!-- Font stuff -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet" />
+    </head>
 
-  <body>
-     
-  </body>
+    <body onresiz e="fixDuck()">
+        <!-- NAV BAR -->
+        <nav id="top-nav" class="nav-bar" style="z-index: 2; position: fixed; top: 0px; background-color: rgba(51, 51, 51, 0); width: 100%; height: 67px;">
+            <a class="nav-link" href="../index.html"><h1>Home</h1></a>
+            <a class="nav-link" href="../subPages/About.html"><h1>About</h1></a>
+            <div class="nav-bar" style="opacity: 0%; background-image: url(../images/bkg/RockMerge.png); width: 100%; height: 5.5vh; background-size: 150%; transform: scale(-1) translate(0, 0.4vh);"></div>
+        </nav>
+        <h1 style="text-align: center; font-size: 100px; margin-top: 200px;">Contact</h1>
 
+        <div id="Duck" onclick="reverseDuck()" style="margin-top: 20px; z-index: 1; position: absolute; background-image: url(Images/duck.png); width: 300px; height: 244px; background-size: 100%;"></div>
+
+        <div style="background: rgb(30, 127, 255); background-image: url(../Images/bkg/plainwater.png); width: 100%; height: 350px; margin-top: 200px; background-size: 9%;">
+            <div style="background-image: url(../Images/bkg/merge.png); width: 100%; height: 55px; background-size: 150%; background-repeat: no-repeat;"></div>
+
+            <h1 class="text-main" style="padding-top: 100px; margin-bottom: 50px; padding-left: 250px; font-size: 2vw; margin: 0px; padding: 40px;">
+              <ul>
+                <li>Email   - gpholben@gmail.com</li>
+                <li>Phone   - (123)-456-7890</li>
+                <li>Github  - <a href="https://github.com/the-real-mastermind">https://github.com/the-real-mastermind</a></li>
+                <li>Discord - therealarchitect</li>
+                <li>Matrix  - @therealarchitect:matrix.org</li>
+
+              </ul>
+            </h1>
+        </div>
+        <footer>
+            <div style="background-image: url(../Images/bkg/RockMerge.png); width: 100%; height: 5.5vh; background-size: 150%; transform: translate(0, -5vh);"></div>
+            &copy; 2025 The Mastrmind. All rights reserved.
+        </footer>
+        <script src="navScroll.js"></script>
+
+    </body>
+
+    
 </html>
