--- a/mobile.html
+++ b/mobile.html
@@ -32,6 +32,7 @@
     .nav-link h1 {
       font-size: clamp(18px, 3vw, 32px);
       color: white;
+      padding: 10px;
       margin: 0;
     }
 
@@ -141,8 +142,11 @@
 <body style="background-image: url(Images/bkg/grass.png);">
   <!-- NAV BAR -->
   <div style="position: relative; width: 100%; height: 70px;">
+    <a class="nav-link" href="subPages/About.html" style="color: black; padding: 10px; font-size: 20px;">About</a>
+    <a class="nav-link" href="subPages/Contact.html" style="color: black; padding: 10px; font-size: 20px;">Contact</a>
+
   	<div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url('Images/bkg/RockMerge.png'); background-size: 150%; transform: scale(-1); z-index: -1;">
-  	</div>
+    </div>
     <br>
 
   </div>
