--- a/subPages/Contact.html
+++ b/subPages/Contact.html
@@ -25,7 +25,7 @@
 
         <div id="Duck" onclick="reverseDuck()" style="margin-top: 20px; z-index: 1; position: absolute; background-image: url(Images/duck.png); width: 300px; height: 244px; background-size: 100%;"></div>
 
-        <div style="background: rgb(30, 127, 255); background-image: url(../Images/bkg/plainwater.png); width: 100%; height: 350px; margin-top: 200px; background-size: 9%;">
+        <div style="background: rgb(30, 127, 255); background-image: url(../Images/bkg/plainwater.png); width: 100%; height: 360%; margin-top: 200px; background-size: 9%;">
             <div style="background-image: url(../Images/bkg/merge.png); width: 100%; height: 55px; background-size: 150%; background-repeat: no-repeat;"></div>
 
             <h1 class="text-main" style="padding-top: 100px; margin-bottom: 50px; padding-left: 250px; font-size: 2vw; margin: 0px; padding: 40px;">
@@ -39,8 +39,8 @@
               </ul>
             </h1>
         </div>
-        <footer>
-            <div style="background-image: url(../Images/bkg/RockMerge.png); width: 100%; height: 5.5vh; background-size: 150%; transform: translate(0, -5vh);"></div>
+        <footer style="">
+            <div style="background-image: url(../Images/bkg/RockMerge.png); width: 100%; height: 5.7vh; background-size: 150%; transform: translate(0, -7vh);"></div>
             &copy; 2025 The Mastrmind. All rights reserved.
         </footer>
         <script src="navScroll.js"></script>
