--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
         <div style="background: rgb(13, 71, 21); width: 100%; height: 80vh; background-size: 150%; background-image: url(Images/bkg/DarkGrass.png); filter: brightness(100%);">
             <div style="background-image: url(Images/bkg/DarkMerge.png); width: 100%; height: 53px; background-size: 150%; transform: translate(0, -40px); background-repeat:  no-repeat;"></div>
-
+            <img style="margin-left: 40%" src="Images/cat-crunch.gif">
+           <h1 style="padding: 20px; text-align: center; color: rgb(255, 255, 255);"> This is Luna Crunchy cat, she is the best cat. Her teeth are an unstopable force of nature. You WILL go subscribe to her and like every single one of her videos. You must now share her with every single person you know:  <a style="color: rgb(0, 183, 255);" href="https://www.youtube.com/@crunchycatLuna">https://www.youtube.com/@crunchycatLuna</a></h1>
         </div>
 
         <footer>
