--- a/subPages/Contact.html
+++ b/subPages/Contact.html
@@ -19,7 +19,7 @@
         <nav id="top-nav" class="nav-bar" style="z-index: 2; position: fixed; top: 0px; background-color: rgba(51, 51, 51, 0); width: 100%; height: 67px;">
             <a class="nav-link" href="../index.html"><h1>Home</h1></a>
             <a class="nav-link" href="../subPages/About.html"><h1>About</h1></a>
-            <div class="nav-bar" style="opacity: 0%; background-image: url(../images/bkg/RockMerge.png); width: 100%; height: 5.5vh; background-size: 150%; transform: scale(-1) translate(0, 0.4vh);"></div>
+            <div class="nav-bar" style="opacity: 0%; background-image: url(../Images/bkg/RockMerge.png);position: absolute; top:65px; width: 100%; height: 50px; background-size: 150%; transform: scale(-1)"></div>
         </nav>
         <h1 style="text-align: center; font-size: 100px; margin-top: 200px;">Contact</h1>
 
